--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>123421</h1>
+    <h2>Хехехехехе</h2>
+    <h2>Я русский</h2>
     
 </body>
 </html>
