--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column_content_copyright">
-              <img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo_white.svg" class="logo_place_footer"></a>
+              <img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo_white.svg" class="logo_place_footer">
               <h4 class="footer__authhor">&#169; 2022. Никита Савицкий</h4>
             </div>
             <div class="footer__column_content_info">
