--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/normalize.css"> 
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css"> 
     <title>Научиться учиться</title>
 </head>
 <body>
     <div class="page">
         <header class="header">
-          <img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo.svg" class="logo_place_header">
+          <a href="https://practicum.yandex.ru/" class="header__link" target="_blank"><img alt="Здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo.svg" class="logo logo_place_header"></a>
           <h1 class="header__title">Научиться учиться</h1>   
-          <img alt="картинка" src="./images/two_again.png" class="header__main-illustrator">
+          <img alt="Картина Фёдора Решетникова - Опять двойка" src="./images/two_again.png" class="header__main-illustrator">
           <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="link" lang="ru"> Узнать &rarr;</a></p>
           <div class="header__square-pic"></div>
         </header>
         <main class="content">
           <section class="description">
             <div class="two-columns">
-              <h2 class="two-columns__brief"><a href="#" class="link" lang="ru">Главные проблемы в обучении</a></h2>
+              <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
               <div class="two-columns__main-text"> 
                 <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                 <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -70,76 +70,80 @@
           </section>
           <section class="feynman">
             <h2 class="feynman__title">Метод Фейнмана</h2>
-            <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
             <a href="#" class="feynman__link" lang="ru">Подробнее &rarr;</a>
-            <img alt="фотография" src="./images/feinman.png" class="feynman__photo">
+            <div class="feynman__photo"></div>
           </section>
           <section class="kaufman">
-          <h2 class="section-title_theme_dark">Принципы обучения</h2>
-          <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <div class="table_theme_dark">
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">1</h4>
-              <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">2</h4>
-              <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">3</h4>
-              <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">4</h4>
-              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">5</h4>
-              <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">6</h4>
-              <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">7</h4>
-              <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">8</h4>
-              <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">9</h4>
-              <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-            <div class="table__cell_theme_black">
-              <h4 class="table__heading_theme_dark">10</h4>
-              <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <div class="table__cell table__cell_theme_black">
+              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-          <img alt="Здесь должен быть треугольник" src="./images/triangle.svg" class="kaufman__triangle">
+          <div class="kaufman__triangle"></div>
           </section>
         </main>
         <footer class="footer">
           <div class="footer__columns">
-            <div class="footer__column_content_copyright">
-              <img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo_white.svg" class="logo_place_footer">
-              <h4 class="footer__authhor">&#169; 2022. Никита Савицкий</h4>
+            <div class="footer__column footer__column_content_copyright">
+              <a href="https://practicum.yandex.ru/" class="footer__link" target="_blank"><img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo_white.svg" class="logo logo_place_footer"></a>
+              <p class="footer__authhor">&#169; 2022. Никита Савицкий</p>
             </div>
-            <div class="footer__column_content_info">
+            <nav class="footer__column footer__column_content_info">
               <h3 class="footer__column-heading">О Практикуме</h3>
-              <h4 class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></h4>
-              <h4 class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></h4>
-              <h4 class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></h4>
-            </div>
-            <div class="footer__column_content_social">
+              <ul class="footer__mark">
+                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
+                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
+                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
+              </ul>
+            </nav>
+            <nav class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
-              <h4 class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></h4>
-              <h4 class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></h4>
-              <h4 class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></h4>
-            </div>
+              <ul class="footer__mark">
+                <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
+                <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
+                <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
+              </ul>
+            </nav>
           </div>
         </footer>
       </div> 
