--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="https://practicum.yandex.ru/" class="header__link" target="_blank"><img alt="Здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo.svg" class="logo logo_place_header"></a>
           <h1 class="header__title">Научиться учиться</h1>   
           <img alt="Картина Фёдора Решетникова - Опять двойка" src="./images/two_again.png" class="header__main-illustrator">
-          <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="link" lang="ru"> Узнать &rarr;</a></p>
+          <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link" lang="ru"> Узнать &rarr;</a></p>
           <div class="header__square-pic"></div>
         </header>
         <main class="content">
@@ -78,43 +78,43 @@
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
           <div class="table table_theme_dark">
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">1</h4>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">2</h4>
               <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">3</h4>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">4</h4>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">5</h4>
               <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">6</h4>
               <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">7</h4>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">8</h4>
               <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">9</h4>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-            <div class="table__cell table__cell_theme_black">
+            <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">10</h4>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
@@ -125,7 +125,7 @@
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
-              <a href="https://practicum.yandex.ru/" class="footer__link" target="_blank"><img alt="здесь должен быть логотип, но что-то пошло не так.." src="./images/logo_white.svg" class="logo logo_place_footer"></a>
+              <a href="https://practicum.yandex.ru/" class="footer__link" target="_blank"><img alt="здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo_white.svg" class="logo logo_place_footer"></a>
               <p class="footer__authhor">&#169; 2022. Никита Савицкий</p>
             </div>
             <nav class="footer__column footer__column_content_info">
@@ -139,9 +139,9 @@
             <nav class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
               <ul class="footer__mark">
-                <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
-                <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
-                <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
+                <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Facebook" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
+                <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="ru" target="_blank"><img alt="иконка Вконтакте" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
+                <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Instagram" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
               </ul>
             </nav>
           </div>
