--- a/index.html
+++ b/index.html
@@ -128,22 +128,26 @@
               <a href="https://practicum.yandex.ru/" class="footer__link" target="_blank"><img alt="здесь должен быть логотип Яндекс Практикума, но что-то пошло не так.." src="./images/logo_white.svg" class="logo logo_place_footer"></a>
               <p class="footer__authhor">&#169; 2022. Никита Савицкий</p>
             </div>
-            <nav class="footer__column footer__column_content_info">
+            <div class="footer__column footer__column_content_info">
               <h3 class="footer__column-heading">О Практикуме</h3>
-              <ul class="footer__mark">
-                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
-                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
-                <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
-              </ul>
-            </nav>
-            <nav class="footer__column footer__column_content_social">
+              <nav class="footer__menu">
+                <ul class="footer__mark">
+                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Главная</a></li>
+                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Концепция</a></li>
+                  <li class="footer__column-links footer__column-link"><a href="#" class="footer__link" lang="ru">Наставники</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__column footer__column_content_social">
               <h3 class="footer__column-heading">Соцсети</h3>
-              <ul class="footer__mark">
-                <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Facebook" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
-                <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="ru" target="_blank"><img alt="иконка Вконтакте" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
-                <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Instagram" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
-              </ul>
-            </nav>
+              <nav class="footer__menu">
+                <ul class="footer__mark">
+                  <li class="footer__column-link"><a href="https://www.facebook.com/yandex.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Facebook" src="./images/facebook_white.svg" class="footer__social-icon">Facebook</a></li>
+                  <li class="footer__column-link"><a href="https://vk.com/yandex.practicum" class="footer__link" lang="ru" target="_blank"><img alt="иконка Вконтакте" src="./images/vk_white.svg" class="footer__social-icon">ВКонтакте</a></li>
+                  <li class="footer__column-link"><a href="https://www.instagram.com/yndx.practicum/" class="footer__link" lang="en" target="_blank"><img alt="иконка Instagram" src="./images/instagram_white.svg" class="footer__social-icon">Instagram</a></li>
+                </ul>
+              </nav>
+            </div>
           </div>
         </footer>
       </div> 
